--- a/connectdialog.ui
+++ b/connectdialog.ui
@@ -65,6 +65,26 @@
     <string>密码</string>
    </property>
   </widget>
+  <widget class="QComboBox" name="serverType">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>130</y>
+     <width>381</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>MySQL</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>SQLite3</string>
+    </property>
+   </item>
+  </widget>
  </widget>
  <resources/>
  <connections/>
