--- a/connectdialog.ui
+++ b/connectdialog.ui
@@ -69,7 +69,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
+     <y>160</y>
      <width>381</width>
      <height>25</height>
     </rect>
@@ -84,6 +84,22 @@
      <string>SQLite3</string>
     </property>
    </item>
+  </widget>
+  <widget class="QLineEdit" name="databaseName">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>130</y>
+     <width>381</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>数据库名</string>
+   </property>
   </widget>
  </widget>
  <resources/>
